Добавил скрытие эл-ов упр-ия при бездействии

--- a/style/slider.css
+++ b/style/slider.css
@@ -1,10 +1,12 @@
 .slider_holder img{
   display: block;
-  transition: margin-left 0.5s cubic-bezier(0,0,0.2,1) 0s;
+  transition: margin-left 0.5s cubic-bezier(0,0,0.2,1) 0s,
+              opacity 0.5s cubic-bezier(0,0,0.2,1) 0s;
 }
 .slider_holder div{
   display: block;
-  transition: margin-left 0.5s cubic-bezier(0,0,0.2,1) 0s;
+  transition: margin-left 0.5s cubic-bezier(0,0,0.2,1) 0s,
+              opacity 0.5s cubic-bezier(0,0,0.2,1) 0s;
 }
 .slider_ctl{
   position:absolute;
